Add news item about health benefits of cats
Updated berita.html to include a new news item about the benefits of keeping cats.

--- a/berita.html
+++ b/berita.html
@@ -29,10 +29,11 @@
     <h2>Berita Terbaru</h2>
 
     <div id="berita-list">
-        <p>Belum ada berita 🙁</p>
+        <p>Hasil Studi; Memelihara Kucing Bisa Kurangi Risiko Empat Penyakit Gawat pada Manusia!</p>
     </div>
 </section>
 
 <script src="main.js"></script>
 </body>
 </html>
+
